# axum_postgres_api

./: .gitignore  Cargo.toml
src/: database.rs  main.rs  models.rs  routes.rs
