[package]
name = "axum_postgres_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "chrono"] }
tokio = { version = "1.45.1", features=["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0.140", features = ["preserve_order"]}
